--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to my food blog!
+title: Slightly Burnt
 description: This will be a space for my cooking and food photos.
